style: fix overflow issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -17,7 +17,6 @@ body {
   font-weight: 400;
   min-width: 25rem;
   min-height: 35rem;
-  overflow-y: hidden;
 }
 
 ul {
